--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,43 @@
-/* CSS untuk desain responsif */
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
     font-family: 'Chewy', cursive; /* Menggunakan font Chewy */
     background-color: #f7f7f7; /* Warna latar belakang */
 }
 
 .container {
-    width: 90%; /* Lebar kontainer responsif */
-    margin: 0 auto; /* Pusatkan kontainer di tengah */
-    padding: 20px; /* Tambahkan padding untuk memisahkan konten dari tepi layar */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1;
 }
 
 .title {
     color: #ff69b4;
     font-size: 3em;
     margin-bottom: 20px;
-    font-size: 2.5vw; /* Ukuran font responsif */
+    animation: fadeInUp 1s ease-out; /* Animasi fadeInUp */
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .message {
     color: #555;
     font-size: 1.2em;
     margin: 20px 0;
-    font-size: 1.2vw; /* Ukuran font responsif */
+    animation: fadeInUp 1s ease-out; /* Animasi fadeInUp */
 }
 
 .gifs {
@@ -35,8 +49,7 @@ body {
 }
 
 .gifs img {
-    width: 30%; /* Ukuran gambar responsif */
-    max-width: 150px; /* Batasi lebar gambar */
+    width: 150px;
     border-radius: 15px;
     transition: transform 0.3s;
 }
@@ -55,8 +68,7 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
     margin-top: 20px;
-    font-size: 1.2vw; /* Ukuran font responsif */
-    padding: 1vw 2vw; /* Padding responsif */
+    animation: fadeIn 1s ease-out; /* Animasi fadeIn */
 }
 
 button:hover {
@@ -69,11 +81,11 @@ button:hover {
 
 #specialMessage {
     margin-top: 30px;
+    animation: slideInDown 1s ease-out; /* Animasi slideInDown */
 }
 
 #specialMessage img {
-    width: 100%; /* Gambar responsif */
-    max-width: 300px; /* Batasi lebar gambar */
+    width: 200px;
     border-radius: 15px;
     margin-top: 20px;
 }
